--- a/GroupSourceControlProject/GroupSourceControlProject.csproj
+++ b/GroupSourceControlProject/GroupSourceControlProject.csproj
@@ -54,6 +54,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\201808012059010_AddedBooksAndMembers.cs" />
+    <Compile Include="Migrations\201808012059010_AddedBooksAndMembers.Designer.cs">
+      <DependentUpon>201808012059010_AddedBooksAndMembers.cs</DependentUpon>
+    </Compile>
     <Compile Include="ObjClasses\Book.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -68,6 +72,9 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Migrations\201808012059010_AddedBooksAndMembers.resx">
+      <DependentUpon>201808012059010_AddedBooksAndMembers.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
