--- a/GroupSourceControlProject/GroupSourceControlProject.csproj
+++ b/GroupSourceControlProject/GroupSourceControlProject.csproj
@@ -60,14 +60,11 @@
     <Compile Include="Forms\FrmLibrary.Designer.cs">
       <DependentUpon>FrmLibrary.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201808012059010_AddedBooksAndMembers.cs" />
-    <Compile Include="Migrations\201808012059010_AddedBooksAndMembers.Designer.cs">
-      <DependentUpon>201808012059010_AddedBooksAndMembers.cs</DependentUpon>
+    <Compile Include="Migrations\201808202236446_DBStart.cs" />
+    <Compile Include="Migrations\201808202236446_DBStart.Designer.cs">
+      <DependentUpon>201808202236446_DBStart.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201808170032498_DataUpdate.cs" />
-    <Compile Include="Migrations\201808170032498_DataUpdate.Designer.cs">
-      <DependentUpon>201808170032498_DataUpdate.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="ObjClasses\Book.cs" />
     <Compile Include="Forms\FrmSignIn.cs">
       <SubType>Form</SubType>
@@ -79,7 +76,6 @@
     <Compile Include="DBClasses\LibraryDB.cs" />
     <Compile Include="ObjClasses\Member.cs" />
     <Compile Include="DBClasses\MemberDB.cs" />
-    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\FrmLibrary.resx">
@@ -88,11 +84,8 @@
     <EmbeddedResource Include="Forms\FrmSignIn.resx">
       <DependentUpon>FrmSignIn.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201808012059010_AddedBooksAndMembers.resx">
-      <DependentUpon>201808012059010_AddedBooksAndMembers.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201808170032498_DataUpdate.resx">
-      <DependentUpon>201808170032498_DataUpdate.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201808202236446_DBStart.resx">
+      <DependentUpon>201808202236446_DBStart.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
