Changed the constraints for MemberID and BookID. Added a method to create a custom MemberID.

--- a/GroupSourceControlProject/GroupSourceControlProject.csproj
+++ b/GroupSourceControlProject/GroupSourceControlProject.csproj
@@ -66,6 +66,11 @@
     <Compile Include="Forms\FrmLibrary.Designer.cs">
       <DependentUpon>FrmLibrary.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201809080004481_DbSet.cs" />
+    <Compile Include="Migrations\201809080004481_DbSet.Designer.cs">
+      <DependentUpon>201809080004481_DbSet.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="ObjClasses\Book.cs" />
     <Compile Include="Forms\FrmSignIn.cs">
       <SubType>Form</SubType>
@@ -88,6 +93,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmSignIn.resx">
       <DependentUpon>FrmSignIn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201809080004481_DbSet.resx">
+      <DependentUpon>201809080004481_DbSet.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
